Several components Updated here Closed previous PR since this PR should cover that as well as the search component refactored a few components minor code layout adjustment for readibility corrected visibility of show more answers

--- a/client/app.css
+++ b/client/app.css
@@ -101,6 +101,10 @@ display: block;
   overflow-y:scroll;
 }
 
+.question-list::-webkit-scrollbar {
+  display:none;
+}
+
 .subtitle {
   margin: none;
 }
